Modiied workflow file one more time

--- a/.github/workflows/ios-tests.yml
+++ b/.github/workflows/ios-tests.yml
@@ -1,12 +1,20 @@
+name: Run iOS Tests on GitHub Actions
+
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+
 jobs:
   ios-tests:
     runs-on: ubuntu-latest
 
     steps:
-      - name:  Checkout code
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
 
-      - name:  Set up Python
+      - name: 🐍 Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
@@ -15,10 +23,16 @@ jobs:
         run: |
           npm install -g appium
 
-      - name:  Install Python dependencies
+      - name: 📦 Install dependencies
         run: |
           pip install -r requirements.txt
 
-      - name:  Run iOS Tests (Appium + Allure)
+      - name: 🧪 Run iOS Tests (Appium + Allure)
         run: |
           pytest tests/ --platform=ios --alluredir=allure-results
+
+      - name: 📤 Upload Allure results
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-results
+          path: allure-results
