--- a/.github/workflows/android-tests.yml
+++ b/.github/workflows/android-tests.yml
@@ -23,14 +23,14 @@ jobs:
         run: |
           pip install -r requirements.txt
 
-      - name: 🔧 Install Node.js & Appium
+      - name: ⚙️ Install Node.js, Appium, and Android driver
         run: |
           curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
           sudo apt-get install -y nodejs
           npm install -g appium
           appium driver install uiautomator2
 
-      - name: 📱 Run Android Emulator & Execute Tests
+      - name: 📱 Set up Android Emulator
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 30
@@ -38,11 +38,9 @@ jobs:
           arch: x86_64
           profile: Nexus 6
           script: |
-            appium &  # Start Appium in background
-            sleep 10  # Wait for it to start
-            pytest tests/ --platform=android --alluredir=allure-results
+            pytest tests/  # Your AppiumService() in code will handle Appium startup
 
-      - name: 🗂️ Upload Allure results
+      - name: 📤 Upload Allure results
         uses: actions/upload-artifact@v4
         with:
           name: allure-results
