--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --self-contained-html
+addopts = --platform=android --html=reports/report.html --self-contained-html --alluredir=allure-results
